// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Snapshots can select items 1`] = `
<div
  className="objectlist-table--scroll"
>
  <table
    className="objectlist-table"
  >
    <thead>
      <tr>
        <th
          className="objectlist-table__th objectlist-table__th--selector"
        >
          <AllSelector
            allSelected={false}
            toggleSelectAll={[Function]}
          />
        </th>
        <TableHeader
          headerItems={
            Object {
              "dataKey": "name",
              "header": "Name",
              "item": [Function],
              "label": "name",
              "optional": false,
              "sortable": true,
            }
          }
          label="name"
          saveWidth={[MockFunction]}
          sortKeys={Array []}
          updateSorting={undefined}
          width={undefined}
        />
        <TableHeader
          headerItems={
            Array [
              Object {
                "dataKey": "age",
                "header": "Age",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortable": true,
              },
              Object {
                "dataKey": "gender",
                "header": "Gender",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortable": true,
              },
            ]
          }
          label="age_gender"
          saveWidth={[MockFunction]}
          sortKeys={Array []}
          updateSorting={undefined}
          width={50}
        />
      </tr>
    </thead>
    <tbody>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={undefined}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Sam
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            25
          </span>
          <br />
          M
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={undefined}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Mary
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            12
          </span>
          <br />
          F
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={undefined}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Q
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            3
          </span>
          <br />
          ?
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={undefined}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Peter
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            111
          </span>
          <br />
          FM
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={undefined}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Amy
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            32
          </span>
          <br />
          Confused
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Snapshots renders default 1`] = `
<div
  className="objectlist-table--scroll"
>
  <table
    className="objectlist-table"
  >
    <thead>
      <tr>
        <TableHeader
          headerItems={
            Object {
              "dataKey": "name",
              "header": "Name",
              "item": [Function],
              "label": "name",
              "optional": false,
              "sortable": true,
            }
          }
          label="name"
          saveWidth={[MockFunction]}
          sortKeys={Array []}
          updateSorting={undefined}
          width={undefined}
        />
        <TableHeader
          headerItems={
            Array [
              Object {
                "dataKey": "age",
                "header": "Age",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortable": true,
              },
              Object {
                "dataKey": "gender",
                "header": "Gender",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortable": true,
              },
            ]
          }
          label="age_gender"
          saveWidth={[MockFunction]}
          sortKeys={Array []}
          updateSorting={undefined}
          width={50}
        />
      </tr>
    </thead>
    <tbody>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          Sam
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            25
          </span>
          <br />
          M
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          Mary
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            12
          </span>
          <br />
          F
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          Q
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            3
          </span>
          <br />
          ?
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          Peter
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            111
          </span>
          <br />
          FM
        </td>
      </tr>
      <tr
        className="objectlist-table__row"
      >
        <td
          className="objectlist-table__td"
        >
          Amy
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            32
          </span>
          <br />
          Confused
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
